--- a/demo/plot_parameters.yaml
+++ b/demo/plot_parameters.yaml
@@ -18,7 +18,7 @@ estimator:
   line: "--"
   color: "#e41a1c"
 error:
-  name: "$\\|e\\|_{1,\\Omega}$"
+  name: "$|e|_{1,\\Omega}$"
   line: "-"
   color: "#377eb8"
 total_error:
