--- a/demo/circle_nice/fem.yaml
+++ b/demo/circle_nice/fem.yaml
@@ -1,6 +1,6 @@
-# Flower smooth test case
-initial_mesh_size: 0.5
-iterations_number: 28
+# Circle with smooth boundary condition test case
+initial_mesh_size: 0.1
+iterations_number: 32
 refinement: "adap"
 mesh_type: "sub"
 finite_element_degree: 1
