--- a/demo/drop/phifem-dir-bdy.yaml
+++ b/demo/drop/phifem-dir-bdy.yaml
@@ -1,6 +1,6 @@
 # Drop test case
-initial_mesh_size: 0.5
-iterations_number: 32
+initial_mesh_size: 0.1
+maximum_dof: 1e6
 refinement: "adap"
 mesh_type: "sub"
 finite_element_degree: 1
@@ -16,5 +16,5 @@ marking_parameter: 0.3
 discretize_levelset: false
 bbox:
 - [-3.25, 1.25]
-- [-1.0001, 1.5001]
+- [-1.25, 1.75]
 name: "$\\varphi$-FEM"
