--- a/demo/drop/phifem.yaml
+++ b/demo/drop/phifem.yaml
@@ -1,8 +1,7 @@
 # Drop test case
-initial_mesh_size: 0.5
-iterations_number: 32
-refinement: "adap"
-mesh_type: "sub"
+maximum_dof: 1e4
+refinement: "unif"
+mesh_type: "bg"
 finite_element_degree: 1
 auxiliary_degree: 1
 levelset_degree: 1
@@ -16,5 +15,5 @@ marking_parameter: 0.3
 discretize_levelset: false
 bbox:
 - [-3.25, 1.25]
-- [-1.25, 1.25]
+- [-1.25, 1.75]
 name: "$\\varphi$-FEM (no BC,geo)"
