--- a/demo/drop/reference.yaml
+++ b/demo/drop/reference.yaml
@@ -1,9 +1,9 @@
 # Drop test case
-initial_mesh_size: 0.5
-iterations_number: 35
+initial_mesh_size: 0.1
+maximum_dof: 1e6
 refinement: "adap"
 mesh_type: "sub"
-finite_element_degree: 2
+finite_element_degree: 1
 marking_parameter: 0.3
 curved: True
 name: "reference"
