--- a/demo/drop/phifem-dir-bdy.yaml
+++ b/demo/drop/phifem-dir-bdy.yaml
@@ -1,12 +1,12 @@
 # Drop test case
-initial_mesh_size: 0.1
+initial_mesh_size: 0.5
 maximum_dof: 1e6
 refinement: "adap"
-mesh_type: "sub"
+mesh_type: "bg"
 finite_element_degree: 1
 auxiliary_degree: 1
 levelset_degree: 1
-boundary_detection_degree: 30
+boundary_detection_degree: 1
 solution_degree: 1
 boundary_correction: true
 dirichlet_estimator: true
