--- a/demo/circle_nice/phifem-bc-geo.yaml
+++ b/demo/circle_nice/phifem-bc-geo.yaml
@@ -1,20 +1,20 @@
-# Drop test case
+# Oursin test case
 initial_mesh_size: 0.1
-maximum_dof: 1e3
+maximum_dof: 1e5
 refinement: "adap"
-mesh_type: "sub"
+mesh_type: "bg"
 finite_element_degree: 1
 auxiliary_degree: 1
 levelset_degree: 1
-boundary_detection_degree: 30
+boundary_detection_degree: 1
 solution_degree: 1
-boundary_correction: false
-dirichlet_estimator: false
+boundary_correction: true
+dirichlet_estimator: true
 penalization_coefficient: 1.0
 stabilization_coefficient: 1.0
 marking_parameter: 0.3
 discretize_levelset: false
 bbox:
-- [-3.25, 1.25]
-- [-1.25, 1.75]
-name: "$\\varphi$-FEM (no BC,geo)"
+- [-1.5, 1.5]
+- [-1.5, 1.5]
+name: "$\\varphi$-FEM"
