--- a/demo/drop/phifem.yaml
+++ b/demo/drop/phifem.yaml
@@ -1,11 +1,12 @@
 # Drop test case
-maximum_dof: 1e4
-refinement: "unif"
+initial_mesh_size: 0.1
+maximum_dof: 1e5
+refinement: "adap"
 mesh_type: "bg"
 finite_element_degree: 1
 auxiliary_degree: 1
 levelset_degree: 1
-boundary_detection_degree: 30
+boundary_detection_degree: 1
 solution_degree: 1
 boundary_correction: false
 dirichlet_estimator: false
