--- a/demo/drop_bc/phifem-bc.yaml
+++ b/demo/drop_bc/phifem-bc.yaml
@@ -12,6 +12,7 @@ penalization_coefficient: 1.0
 stabilization_coefficient: 1.0
 marking_parameter: 0.3
 discretize_levelset: true
+single_layer: true
 bbox:
 - [-3.25, 1.25]
 - [-1.25, 1.75]
